<resources>
    <string name="app_name">Level 2</string>
    <string name="name">Name</string>
    <string name="is_a_student">Is a student</string>
    <string name="is_not_a_student">Is not a student</string>
    <string name="default_age">0 years</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No data</string>
    <string name="a_button_to_close_user_description_window">A button to close user description window</string>
    <string name="user_details">User details</string>
    <string name="zero_years">0 years</string>
    <string name="age">Age</string>
    <string name="close">Close</string>
    <string name="add_a_new_user">Add a new user</string>
    <string name="type_new_user_s_name_in">Type new user\'s name in</string>
    <string name="type_user_s_name_in">Type user\'s name in</string>
    <string name="type_user_s_age_in">Type user\'s age in</string>
    <string name="add_user">Add user</string>
</resources>