<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="370dp"
    android:layout_height="1000dp"
    android:background="#E2E2E2"
    android:elevation="10dp"
    tools:context=".UserDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/add_a_new_user"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_user_fragment_close_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/close"
            android:textColor="@color/black"
            android:contentDescription="@string/a_button_to_close_user_description_window"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp">
        <TextView
            android:id="@+id/name_column_add_user_textview"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_add_user_textedit"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:hint="@string/type_user_s_name_in"
            android:inputType="textPersonName"
            android:autofillHints="name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/age_column_add_user_textview"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/age" />

        <EditText
            android:id="@+id/age_add_user_textedit"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:hint="@string/type_user_s_age_in"
            android:inputType="number"
            android:autofillHints="age" />
    </LinearLayout>

    <DatePicker
        android:id="@+id/add_user_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="@string/no_data"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_user_fragment_add_user_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/add_a_new_user"
        android:textColor="@color/black"
        android:contentDescription="@string/a_button_to_close_user_description_window"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"/>

</LinearLayout>