<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="370dp"
    android:layout_height="300dp"
    android:background="#E2E2E2"
    android:elevation="10dp"
    tools:context=".UserDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/user_details"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_close_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/white"
            android:text="@string/close"
            android:textColor="@color/black"
            android:contentDescription="@string/a_button_to_close_user_description_window"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="45dp">
        <TextView
            android:id="@+id/name_column_details_textview"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/name" />

        <TextView
            android:id="@+id/name_details_textview"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/no_data" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp">
        <TextView
            android:id="@+id/age_column_details_textview"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/age" />

        <TextView
            android:id="@+id/age_details_textview"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/no_data" />
    </LinearLayout>

    <TextView
        android:id="@+id/is_student_details_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:text="@string/no_data" />

</LinearLayout>